# HolmnerChessEngine

./: CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/include/: Logger.h
Common/include/Common/: CommonUtilities.h  Logger.h  StopWatch.h
Common/src/: CommonUtilities.cpp  Logger.cpp  StopWatch.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  EngineAPI.h
Engine/include/Engine/: EngineAPI.h  EngineAPIReturnDefinitions.h
Engine/src/: Board.cpp  BoardEvaluator.cpp  BoardState.cpp  Engine.cpp  EngineAPI.cpp  EngineUtilities.cpp  FastSqLookup.cpp  Move.cpp  MoveGenLookup.cpp  PiecesAndSquares.cpp  Utilities.cpp
Engine/src/PrivateInclude/: Board.h  BoardEvaluator.h  BoardState.h  Engine.h  EngineUtilities.h  FastSqLookup.h  HashValues.h  Move.h  MoveGenLookup.h  PiecesAndSquares.h  PiecesSquaresAndMoves.h  SearchHelpers.h  Utilities.h
Engine/src/private_include/: BoardState.h
HolmnerChessGui/: CMakeLists.txt
HolmnerChessGui/include/: Board.h  CapturedPiece.h  Clickable.h  Drawable.h  EngineWrapper.h  GameInstance.h  GameStateHandler.h  GuiUtilities.h  ImageData.h  MenuHandler.h  Piece.h  PlayHandler.h  ResourceData.h  Resources.h  Squares.h  StatesAndEvents.h  Text.h  ThirdPartyWrappersFactory.h  Utilities.h  Vec2.h  Window.h
HolmnerChessGui/include/ThirdPartyWrappers/: SFMLClickable.h  SFMLDrawable.h  SFMLText.h  SFMLWindow.h
HolmnerChessGui/src/: Board.cpp  CapturedPiece.cpp  EngineWrapper.cpp  GameInstance.cpp  GuiUtilities.cpp  MenuHandler.cpp  Piece.cpp  PlayHandler.cpp  Resources.cpp  Squares.cpp  Utilities.cpp  main.cpp
HolmnerChessGui/src/Images/: BlackBishopImg.cpp  BlackKingImg.cpp  BlackKnightImg.cpp  BlackPawnImg.cpp  BlackQueenImg.cpp  BlackRookImg.cpp  MenuBackgroundImg.cpp  MenuButtonHardImg.cpp  MenuButtonMediumImg.cpp  MenuButtonSideBlackImg.cpp  MenuButtonSillyImg.cpp  WhiteBishopImg.cpp  WhiteKingImg.cpp  WhiteKnightImg.cpp  WhitePawnImg.cpp  WhiteQueenImg.cpp  WhiteRookImg.cpp
HolmnerChessGui/src/Resources/: BlackQueenImg.cpp  BlackRookImg.cpp  BlackToPlayLitImg.cpp  BlackToPlayUnlitImg.cpp  BlackWinsImg.cpp  BoardEdgeBlackImg.cpp  BoardEdgeImg.cpp  BoardEdgeWhiteImg.cpp  BoardImg.cpp  DefaultFont.cpp  DrawImg.cpp  MenuButtonEasyImg.cpp  MenuButtonSideWhiteImg.cpp  WhiteQueenImg.cpp  WhiteToPlayLitImg.cpp  WhiteToPlayUnlitImg.cpp  WhiteWinsImg.cpp
HolmnerChessGui/src/ThirdPartyWrappers/: SFMLClickable.cpp  SFMLDrawable.cpp  SFMLText.cpp  SFMLWindow.cpp  ThirdPartyWrappersFactory.cpp
Tests/: CMakeLists.txt
Tests/include/: AlphaBetaMiniMaxEquivalencyTests.h  FENTests.h  GetBestMovePerformanceTests.h  RawMinimaxPerformanceTests.h  StaticEvaluationTests.h  TestsUtilities.h
Tests/src/: AlphaBetaMiniMaxEquivalencyTests.cpp  FENTests.cpp  GetBestMovePerformanceTests.cpp  RawMinimaxPerformanceTests.cpp  StaticEvaluationTests.cpp  TestUtilities.cpp  TestsUtilities.cpp  Utilities.cpp  main.cpp
src/: CMakeLists.txt
